Fixed the word spacing issue

--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -9,7 +9,7 @@ body {
 }
 
 p{
-    letter-spacing: 2px;
+    letter-spacing: 0.5px;
     font-size: 15px;
 }
 
